2007-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyDependenciesVisualizer.cs, DeclarativeSecurityVisualizer.cs: 
	Use of generics	and cleaning up source to match Mono style.

2007-06-27  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyInfo.cs: Updated for 0.2.
	* Monoxide.Metadata.mdp: Updated.
	* MetadataPlugIn.cs: Deleted, not required with Mono.Addins.
	* AssemblyDependenciesVisualizer.cs: Renamed from AssemblyDependenciesView.cs
	* DeclarativeSecurityVisualizer.cs: Renamed from DeclarativeSecurityView.cs

2006-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyDependenciesView.cs: New. Display a graphical view of the 
	dependencies of all loaded assemblies (digraph).
	* AssemblyInfo.cs: New. Assembly/plugin information.
	* DeclarativeSecurityView.cs: Display a textual grouped-view of the
	declarative security attributes associated with assemblies, modules,
	types and methods.
	* MetadataPlugIn.cs: New. Plugin registration (of it's views).
	* Monoxide.Metadata.mdp: MonoDevelop project file for the metadata 
	plugin.